fix(Legend): Legend colors readable on dark and light backgrounds. Legend almost works perfectly - wip...

--- a/src/components/Legend.css
+++ b/src/components/Legend.css
@@ -50,3 +50,6 @@
   width: 100%;
   height: 26px;
 }
+.LegendStepLabel {
+  filter: invert(100%);  
+}
